--- a/src/app/(pages)/checkout/BankTransferPayment/index.module.scss
+++ b/src/app/(pages)/checkout/BankTransferPayment/index.module.scss
@@ -5,7 +5,6 @@
   display: flex;
   gap: 1rem;
   margin-top: 1rem;
-  justify-content: left;
 }
 
 .buttonCart {
@@ -18,7 +17,7 @@
   color: white;
   position: relative;
   z-index: 0;
-  width: 26%;
+  width:38%;
 }
 
 .buttonSubmit::before {
@@ -54,12 +53,11 @@
 }
 
 .bankDetails {
-   flex: 1;
+  flex: 1;
 }
 
 .addressFormContainer {
   flex: 1;
-  max-width: 500px; /* Optional: Set a max-width for the address form */
 }
 
 .addressForm {
